# alakzatok

./: CMakeLists.txt  README.md  main.cpp
